[rce] fix(image): caption is hidden for original-sized or wrapped images

--- a/rich-content-editor/src/Styles/global.scss
+++ b/rich-content-editor/src/Styles/global.scss
@@ -64,6 +64,7 @@
     margin-right: calc((100% - #{$textMobileWidth}) / 2);
   }
 }
+
 .sizeOriginal {
   width: auto;
   max-width: 740px;
@@ -79,11 +80,11 @@
 }
 
 .sizeSmall {
-  width: 350px;
+  max-width: 350px;
 }
 
 .sizeSmallCenter {
-  width: 350px;
+  max-width: 350px;
   margin: 0 auto;
 }
 
